If the user exists abruptly, tip's "tipout" child can hang around forever. Since the lock file doesn't get cleaned up, this prevents other users from accessing the target device.

(phk adds: Man, this has been bugging me for YEARS!)

PR:		12528
Submitted by:	Craig Leres leres@ee.lbl.gov
MFC after:	1 week

Former-commit-id: 3ab8b5fcc5ccb99b2c48be4da1fddaf4aa02bf35